--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -5,8 +5,16 @@
   <name>jpa</name>
 
   <parent>
-	  <groupId>test</groupId>
-	  <artifactId>main-test</artifactId>
-	  <version>1.0.0-SNAPSHOT</version>
+  	<groupId>test</groupId>
+  	<artifactId>main-test</artifactId>
+  	<version>1.0.0-SNAPSHOT</version>
   </parent>
+  
+  <dependencies>
+    <dependency>
+		<groupId>org.eclipse.persistence</groupId>
+		<artifactId>javax.persistence</artifactId>
+		<version>2.1.0</version>
+	</dependency>
+  </dependencies>
 </project>
