--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -16,5 +16,11 @@
 	  	  <artifactId>jpa</artifactId>
 	  	  <version>1.0.0-SNAPSHOT</version>
 	  </dependency>
+	  <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.11</version>
+		<scope>test</scope>
+	  </dependency>
   </dependencies>
 </project>
