--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -16,5 +16,15 @@
 		<artifactId>javax.persistence</artifactId>
 		<version>2.1.0</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.openjpa</groupId>
+		<artifactId>openjpa</artifactId>
+		<version>2.3.0</version>
+	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.27</version>
+	</dependency>
   </dependencies>
 </project>
